build the drive plugin
Change-Id: Ie460b01305a160e1505d34a46058445182d17791