@@ -17,11 +17,10 @@
 
 apply plugin: 'com.android.application'
 apply plugin: 'com.jakewharton.hugo'
-apply plugin: 'org.robolectric'
 
 // Versioning
 def versionMajor = 0
-def versionMinor = 2
+def versionMinor = 3
 def versionPatch = 0
 def versionBuild = 0 // bump for dogfood builds, public betas, etc.
 
@@ -82,45 +81,8 @@ android {
 
 }
 
-robolectric {
-    include '**/*Test.class'
-    //jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'
-    afterTest {
-        descriptor, result -> println "Executing test for ${descriptor.name} with result: ${result.resultType}"
-    }
-}
-
 dependencies {
     provided(group: 'com.google.dagger', name:'dagger-compiler', version: rootProject.ext.dagger2Version)
 
-    compile project(':plugin-common')
-    compile project(':core-library')
-
-    compile (group:'com.jakewharton', name:'butterknife', version: rootProject.ext.butterKnifeVersion)
-
-    //https://github.com/google/google-api-java-client/releases
-    compile ('com.google.api-client:google-api-client-android:1.20.0') {
-        exclude module: 'httpclient'
-        exclude group: 'com.google.guava'
-    }
-//    compile ('com.google.api-client:google-api-client-gson:1.20.0') {
-//        exclude module: 'httpclient'
-//    }
-    //https://developers.google.com/api-client-library/java/apis/drive/v2
-    compile ('com.google.apis:google-api-services-drive:v2-rev168-1.20.0') {
-        exclude module: 'httpclient'
-        exclude group: 'com.google.guava'
-    }
-    compile 'com.google.android.gms:play-services-identity:6.5.87'
-    //workaround for build fail similar to https://github.com/groovy/groovy-android-gradle-plugin/issues/32
-    //default is 13 which borks dagger
-    compile 'com.google.guava:guava-jdk5:17.0'
-
-    testCompile('junit:junit:4.12')
-    testCompile('org.robolectric:robolectric:2.4') {
-        exclude module: 'commons-logging'
-        exclude module: 'httpclient'
-    }
-    testCompile('com.squareup:fest-android:1.0.0')
-    testCompile('org.mockito:mockito-core:1.10.0')
+    compile project(':library-googledrive')
 }
